edited code, so that the error removes